:skull: Fix some form bugs
* Focus is not working
* Title form width is too narrow to edit efficient

--- a/src/app/components/summary/summary.css
+++ b/src/app/components/summary/summary.css
@@ -1,3 +1,9 @@
+/* Force set width to title editing form */
+/* See https://github.com/angular/material2/pull/7083 */
+:host >>> .mat-form-field .mat-form-field-infix {
+    width: 500px;
+}
+
 mat-sidenav {
     padding: 5px;
     width: 355px;
